Fix collapsing anchor links

--- a/public/style.css
+++ b/public/style.css
@@ -108,6 +108,7 @@ input[type="submit"] {
   border: 1px solid transparent;
   border-radius: 0.4rem;
   padding: 1rem 1.75rem;
+  display: inline-block;
 }
 
 /**
